--- a/Contact-us.html
+++ b/Contact-us.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>Contact-us</title>
         <link rel="stylesheet" href="Contact-us.css">
+         <link rel="shortcut icon" type="image/x-icon" href="output-onlinepngtools.png"/>
 </head>
     <body>
         
